UI: theme toggle + blue-green (teal) dark theme

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                         <p>Multi-Model Risk Assessment & Loan Recommendation</p>
                     </div>
                 </div>
-                <div>
+                <div style="display:flex;align-items:center;gap:12px">
                     <div class="status-indicator status-disconnected" id="statusIndicator" aria-live="polite">🔄 Connecting...</div>
+                    <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme" title="Toggle light / dark">🌙</button>
                 </div>
             </div>
         </div>
